# Blue-Wake

./: .gitignore  Brief.md  CMakeLists.txt  CONTEXT.md  EEXI_CII_Plugin_Project_Proposal.docx  README.md
demo/: nmea_demo.ps1
docs/: FIELD_TEST_GATE.md  OpenCPN_BUILD.md  OpenCPN_TESTING.md  PANEL_DEMO.md  PLUGIN_MANAGER_RELEASE.md  PRD.md  RELEASE_NOTES_0.1.0.md  TROUBLESHOOTING.md  VALIDATION_PACK.md  implementation_plan.md
docs/adr/: 0001-own-ship-only.md  0002-admiralty-coefficient-fuel-estimation.md  0003-json-and-wxfileconfig-persistence.md  0004-exclude-below-1-knot-sog.md
docs/research/: domain-gaps-analysis.md
report/: main.tex  references.bib
report/structure/: 01-introduction.tex  02-literature-review.tex  03-methodology.tex  04-results.tex  05-conclusion.tex  06-appendix.tex
src/config/: profile_settings.cpp  profile_settings.h
src/data/: accumulator.cpp  accumulator.h  haversine.cpp  haversine.h  nmea_parser.cpp  nmea_parser.h  persistence.cpp  persistence.h
src/domain/: aer_engine.cpp  aer_engine.h  cii_reference.cpp  cii_reference.h  fuel_estimator.cpp  fuel_estimator.h  vessel_profile.cpp  vessel_profile.h
src/export/: csv_exporter.cpp  csv_exporter.h
src/opencpn/: eexi_cii_pi.cpp  eexi_cii_pi.h
src/plugin/: plugin_core.cpp  plugin_core.h
src/ui/: dashboard_panel.cpp  dashboard_panel.h  setup_dialog.cpp  setup_dialog.h
tests/: accumulator_tests.cpp  aer_engine_tests.cpp  data_tests.cpp  domain_tests.cpp  packaging_tests.ps1  pipeline_tests.cpp  replay_validation_tests.cpp
tests/fixtures/: opencpn-plugin-minimal.xsd  replay_validation_route.nmea
tools/: package_opencpn_plugin.ps1
